--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
             <th> Start Time </th>
             <th> Exam Title </th>
             <th> Room </th>
-            <th> Seat R </th>
-            <th> Seat S </th>
-            <th> Seat K </th>
+            <th> Seat RR </th>
+            <th> Seat SR </th>
+            <th> Seat KK </th>
+            <th> Seat RB </th>
             <th> Duration </th>
             <th> Days left </th>
         </tr>
@@ -66,6 +67,7 @@
             <td align="center"> 37 </td>
             <td align="center"> - </td>
             <td align="center"> - </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="softEng"></p> </td>
         </tr>
@@ -78,6 +80,7 @@
             <td align="center"> - </td>
             <td align="center"> 5 </td>
             <td align="center"> - </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
         </tr>
@@ -90,6 +93,7 @@
             <td align="center"> 137 </td>
             <td align="center"> 21 </td>
             <td align="center"> 84 </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="models"></p> </td>
         </tr>
@@ -102,6 +106,7 @@
             <td align="center"> 210 </td>
             <td align="center"> 90 </td>
             <td align="center"> 156 </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="databases"></p> </td>
         </tr>
@@ -114,6 +119,7 @@
             <td align="center"> 141 </td>
             <td align="center"> 21 </td>
             <td align="center"> 87 </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="profComp"></p> </td>
         </tr>
@@ -126,6 +132,7 @@
             <td align="center"> 332 </td>
             <td align="center"> 216 </td>
             <td align="center"> 279 </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="csa"></p> </td>
         </tr>
@@ -138,6 +145,7 @@
             <td align="center"> 39 </td>
             <td align="center"> 10 </td>
             <td align="center"> 22 </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="ccpp"></p> </td>
         </tr>
@@ -150,6 +158,7 @@
             <td align="center"> 42 </td>
             <td align="center"> 11 </td>
             <td align="center"> 32 </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="graphics"></p> </td>
         </tr>
@@ -162,6 +171,7 @@
             <td align="center"> 197 </td>
             <td align="center"> 92 </td>
             <td align="center"> 152 </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="maths"></p> </td>
         </tr>
@@ -174,6 +184,7 @@
             <td align="center"> 209 </td>
             <td align="center"> 114 </td>
             <td align="center"> 168 </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="security"></p> </td>
         </tr>
@@ -186,6 +197,7 @@
             <td align="center"> - </td>
             <td align="center"> - </td>
             <td align="center"> 41 </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="nlp"></p> </td>
         </tr>
