New Collaborator: Harvey H

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <th> Seat SR </th>
             <th> Seat KK </th>
             <th> Seat RB </th>
+            <th> Seat HH </th>
             <th> Duration </th>
             <th> Days left </th>
         </tr>
@@ -67,6 +68,7 @@
             <td align="center"> 37 </td>
             <td align="center"> - </td>
             <td align="center"> - </td>
+            <td align="center"> N/A </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="softEng"></p> </td>
@@ -81,6 +83,7 @@
             <td align="center"> 5 </td>
             <td align="center"> - </td>
             <td align="center"> N/A </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
         </tr>
@@ -93,6 +96,7 @@
             <td align="center"> 137 </td>
             <td align="center"> 21 </td>
             <td align="center"> 84 </td>
+            <td align="center"> N/A </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="models"></p> </td>
@@ -107,6 +111,7 @@
             <td align="center"> 90 </td>
             <td align="center"> 156 </td>
             <td align="center"> N/A </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="databases"></p> </td>
         </tr>
@@ -119,6 +124,7 @@
             <td align="center"> 141 </td>
             <td align="center"> 21 </td>
             <td align="center"> 87 </td>
+            <td align="center"> N/A </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="profComp"></p> </td>
@@ -133,6 +139,7 @@
             <td align="center"> 216 </td>
             <td align="center"> 279 </td>
             <td align="center"> N/A </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="csa"></p> </td>
         </tr>
@@ -145,6 +152,7 @@
             <td align="center"> 39 </td>
             <td align="center"> 10 </td>
             <td align="center"> 22 </td>
+            <td align="center"> N/A </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="ccpp"></p> </td>
@@ -159,6 +167,7 @@
             <td align="center"> 11 </td>
             <td align="center"> 32 </td>
             <td align="center"> N/A </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="graphics"></p> </td>
         </tr>
@@ -171,6 +180,7 @@
             <td align="center"> 197 </td>
             <td align="center"> 92 </td>
             <td align="center"> 152 </td>
+            <td align="center"> N/A </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="maths"></p> </td>
@@ -185,6 +195,7 @@
             <td align="center"> 114 </td>
             <td align="center"> 168 </td>
             <td align="center"> N/A </td>
+            <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="security"></p> </td>
         </tr>
@@ -197,6 +208,7 @@
             <td align="center"> - </td>
             <td align="center"> - </td>
             <td align="center"> 41 </td>
+            <td align="center"> N/A </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="nlp"></p> </td>
